style: change logo text

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="h-screen flex flex-col justify-between">
       <header class="flex justify-between items-center p-4">
-        <div class="brand">Devs.</div>
+        <div class="brand">Devscale.</div>
         <nav class="flex gap-4 bg-slate-200 px-6 py-2 rounded-full">
           <div>Home</div>
           <div>About</div>
